--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,39 +1,13 @@
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.0
-    hooks:
-      - id: ruff
-        args: [--fix]
-        exclude: |
-          (?x)^(
-            \.venv/        # venv ignorieren
-            | data/        # Roh‑ und Zwischendaten
-          )
   - repo: https://github.com/psf/black
-    rev: 24.4.0
-    hooks:
-      - id: black
-        language_version: python3
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
-    hooks:
-      - id: end-of-file-fixer
-      - id: trailing-whitespacerepos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.4.0
-    hooks:
-      - id: ruff
-        args: [--fix]
-
-  - repo: https://github.com/psf/black
-    rev: 24.4.0
+    rev: 24.4.2        # oder aktuelle Version
     hooks:
       - id: black
         language_version: python3
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.4        # oder aktuelle Version
     hooks:
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
+      - id: ruff
+        args: ["--fix"] 
 
